[project]
name = "ComfyUI-LK-Universal-Pro"
version = "2.0.0"
description = "围绕 Gemini API 深度开发的 ComfyUI 节点集合"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LK Studio"}
]
keywords = ["comfyui", "gemini", "ai", "image-generation", "video-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
video = ["opencv-python>=4.5.0"]

[project.urls]
Homepage = "https://github.com/hdzwzqbxlk/ComfyUI-LK-Universal-Pro"
Repository = "https://github.com/hdzwzqbxlk/ComfyUI-LK-Universal-Pro.git"
Issues = "https://github.com/hdzwzqbxlk/ComfyUI-LK-Universal-Pro/issues"

[tool.setuptools]
packages = ["nodes", "utils"]
